<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/shape_ractengle_rv_item_grey"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_profil_daftar_draver"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/baner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_pic" />

    <TextView
        android:id="@+id/tv_nama_daftar_driver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="end"
        android:text="@string/nama_user"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_profil_daftar_draver"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nohp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="end"
        android:text="@string/no_hp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_profil_daftar_draver"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_daftar_driver" />
</androidx.constraintlayout.widget.ConstraintLayout>